# whisper-cpp-capacitor

./: .gitignore  .gitmodules  .npmignore  CONTRIBUTING.md  Package.swift  README.md  WhisperCpp.podspec  build-native-web.sh  build-native.sh  jest.config.cjs  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
.kiro/specs/whisper-cpp-capacitor/: design.md  requirements.md  tasks.md
android/: build.gradle  proguard-rules.pro
android/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
android/src/main/java/com/getcapacitor/plugin/whispercpp/: WhisperCpp.java  WhisperCppPlugin.java
cpp/: CMakeLists.txt  cap-whisper-wasm.cpp  cap-whisper.cpp  cap-whisper.h
docs/: design.md  requirements.md  tasks.md
ios/: CMakeLists.txt
ios/Sources/WhisperCppPlugin/: WhisperCpp.swift  WhisperCppBridge.mm  WhisperCppPlugin.swift
src/: definitions.ts  errors.ts  index.ts  web.ts
test/__mocks__/: capacitor.ts
test/unit/: api.test.ts  errors.test.ts  pbt.test.ts
wasm/: CMakeLists.txt
